# nes

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
nes/: CMakeLists.txt  test.asm
nes/res/shaders/: basic.frag  basic.vert
nes/src/: main.cc  npch.cc  npch.h
nes/src/emulator/asm/: assembler.cc  assembler.h
nes/src/emulator/hardware/: bus.cc  bus.h  cpu.cc  cpu.h
nes/src/hardware/: bus.cc  bus.h  cpu.cc  cpu.h
nes/src/nes/: bus.cc  bus.h  cpu.cc  cpu.h  nes.cc  nes.h  renderer.cc  renderer.h  types.h
nes/src/nes/emulator/: cpu.cc  cpu.h  emulator.cc  emulator.h
nes/src/nes/graphics/: imgui_layer.cc  imgui_layer.h  renderer.cc  renderer.h  window.cc  window.h
nes/src/render/: index_buffer.cc  index_buffer.h  quad.cc  quad.h  shader.cc  shader.h  vertex_array.cc  vertex_array.h  vertex_buffer.cc  vertex_buffer.h  window.cc  window.h
nes/src/util/: event_emitter.cc  event_emitter.h  types.h
nes/test/emulator/asm/: assembler_test.cc
